# sqrtVINS

./: .gitignore  CMakeLists.txt  pixi.toml
ov_core/: CMakeLists.txt
ov_core/cmake/: NO_ROS.cmake  ROS2.cmake
ov_srvins/: CMakeLists.txt
ov_srvins/cmake/: NO_ROS.cmake  ROS1.cmake  ROS2.cmake
ov_srvins/src/core/: VioManager.cpp  VioManager.h
ov_srvins/src/initializer/: InertialInitializer.cpp  InertialInitializer.h
ov_srvins/src/initializer/dynamic/: DynamicInitializer.cpp  DynamicInitializer.h  Solver.cpp  Solver.h
ov_srvins/src/state/: IMUHandler.cpp  IMUHandler.h  Propagator.cpp  Propagator.h
ov_srvins/src/update/: UpdaterMSCKF.cpp  UpdaterMSCKF.h  UpdaterSLAM.cpp  UpdaterSLAM.h
